Mejora en toda la pagina

--- a/html/materiales.html
+++ b/html/materiales.html
@@ -5,33 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiales - GS Carpinteria</title>
+    <link rel="shortcut icon" href="../multimedia/Multimedia/logo nuevo 2.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 
 </head>
-<body>
-    <div class="fondo">
-       <header class="header">
-           <nav class="nav">
-              <img src="../multimedia/Multimedia/logo nuevo 2.svg" width="250" height="60" alt="GScarpinteria" class="logo">
-              <ul class="nav-menu">
-                <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
-                <li class="nav-menu-item"><a href="../html/nosotros.html" class="nav-menu-link nav-link">Nosotros</a></li>
-                <li class="nav-menu-item"><a href="../html/galería.html" class="nav-menu-link nav-link">Galería</a></li>         
-                <li class="nav-menu-item"><a href="../html/materiales.html" class="nav-menu-link nav-link">Materiales</a></li>
-              </ul>
-           </nav>
-          <h1>Materiales</h1>
-                <div class="row row-cols-3 row-cols-md-2 g-4">
-                    <div class="col">
+<body class="fondo">
+    <header class="header">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="container-fluid">
+             <a class="navbar-brand animacion" href="../index.html">
+                <img src="../multimedia/Multimedia/logo nuevo 2.svg" alt="Logo" class="d-inline-block align-text-top redondeado" width="40" height="40"> 
+                GS Carpintería</a>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../html/materiales.html">Materiales</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="../html/galería.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="../html/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="../html/contacto.html">Contacto</a>
+                  </li>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Materiales</h2>
+            <div class="container1">
+                <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-3">
                         <div class="card">
                             <img src="../multimedia/Multimedia/bisagras.jpg" class="card-img-top" alt="Bisagras">
                             <div class="card-body">
-                                <h5 class="card-title">Bisagras cazoleta</h5>
-                                <p class="card-text">Estas bisagras de excelente funcionamiento, se pueden utilizar en armarios, placares, puertas, etc. Sus medidas varían de acuerdo a su utilidad, ya que se encuentran en medidas de 26mm y 35mm y tambien pueden ser cierre suave, push to open o de ciere común. La bisagra cazoleta, permite el regulado de puertas de una forma simple para lograr el perfecto alineado de las puertas.</p>
+                            <h5 class="card-title">Bisagras cazoleta</h5>
+                            <p class="card-text">Estas bisagras de excelente funcionamiento, se pueden utilizar en armarios, placares, puertas, etc. Sus medidas varían de acuerdo a su utilidad, ya que se encuentran en medidas de 26mm y 35mm y tambien pueden ser cierre suave, push to open o de ciere común. La bisagra cazoleta, permite el regulado de puertas de una forma simple para lograr el perfecto alineado de las puertas.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-12 col-lg-3">
                         <div class="card">
                             <img src="../multimedia/Multimedia/correderas telescopicas.jpg" class="card-img-top" alt="correderas">
                             <div class="card-body">
@@ -40,8 +55,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                         <div class="card">
+                    <div class="col-sm-12 col-md-12 col-lg-3">
+                        <div class="card">
                             <img src="../multimedia/Multimedia/perfiles aluminio.jpg" class="card-img-top" alt="perfiles">
                             <div class="card-body">
                                 <h5 class="card-title">Perfilería de aluminio</h5>
@@ -49,17 +64,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card">
-                            <img src="../multimedia/Multimedia/placas de melamina.jpg" class="card-img-top" alt="melamina">
-                            <div class="card-body">
-                                <h5 class="card-title">Placas de melamina</h5>
-                                <p class="card-text">Sin lugar a dudas la estrella de el diseño final. De diferentes colores y texturas, se pueden encontrar en dos presentaciones: en base MDF de diferentes espesores 5mm, 12mm, 15mm y 18mm. De una excelente calidad y resistencia. Y en base aglomerado, en espesores de 12mm, 15mm, 18mm, 24mm y 36mm. No es la misma calidad que la melamina base MDF, pero si sus dibujos, colores y texturas. Una opción mas económica a la hora de evaluar costos.  </p>
+                        <div class="col-sm-12 col-md-12 col-lg-3">
+                            <div class="card">
+                                <img src="../multimedia/Multimedia/placas de melamina.jpg" class="card-img-top" alt="melamina">
+                                <div class="card-body">
+                                    <h5 class="card-title">Placas de melamina</h5>
+                                    <p class="card-text">Sin lugar a dudas la estrella de el diseño final. De diferentes colores y texturas, se pueden encontrar en dos presentaciones: en base MDF de diferentes espesores 5mm, 12mm, 15mm y 18mm. De una excelente calidad y resistencia. Y en base aglomerado, en espesores de 12mm, 15mm, 18mm, 24mm y 36mm. No es la misma calidad que la melamina base MDF, pero si sus dibujos, colores y texturas. Una opción mas económica a la hora de evaluar costos.  </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-       </header>
-    </div>
+    </main>
+    <footer class="footer">
+        <div>&copy;Todos los derechos reservados - GS Carpintería - 2022 - La Emilia - Provincia de Buenos Aires - Argentina</div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
