--- a/html/galería.html
+++ b/html/galería.html
@@ -5,38 +5,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería-GSCarpinteria</title>
+    <link rel="shortcut icon" href="../multimedia/Multimedia/logo nuevo 2.svg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
 
 </head>
 
-<body>
-    <div class="fondo">
-      <header class="header">
-           <nav class="nav">
-              <img src="../multimedia/Multimedia/logo nuevo 2.svg" width="250" height="60" alt="GScarpinteria" class="logo">
-               <ul class="nav-menu">
-                  <li class="nav-menu-item"><a href="../index.html" class="nav-menu-link nav-link">Inicio</a></li>
-                  <li class="nav-menu-item"><a href="../html/nosotros.html" class="nav-menu-link nav-link">Nosotros</a></li> 
-                  <li class="nav-menu-item"><a href="../html/galería.html" class="nav-menu-link nav-link">Galería</a></li>
-                  <li class="nav-menu-item"><a href="../html/materiales.html" class="nav-menu-link nav-link">Materiales</a></li>
-               </ul>
-           </nav>
-           <a href="#galería"><h1>Galería</h1>  
-                <div id="galería" class="grid-container">
-                    <div class="grid-item"><img src="../multimedia/Multimedia/cajitas de madera.jpg" width="250" height="200" alt="cajitas de madera"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/juego cocina.jpg"width="250" height="200" alt="juego cocina"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/juego de living.jpg"width="250" height="200" alt="juego de living"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/juego dormitorio.jpg"width="250" height="200" alt="juego dormitorio"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/mesa de arrime.jpg"width="250" height="200" alt="mesa de arrime"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/bisagras.jpg"width="250" height="200" alt="bisagras"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/correderas telescopicas.jpg"width="250" height="200" alt="correderas    telescopicas"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/perfiles aluminio.jpg"width="250" height="200" alt="perfiles aluminio"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/placas de melamina.jpg"width="250" height="200" alt="placas de melamina"></div>
-                    <div class="grid-item"><img src="../multimedia/Multimedia/tiradores.jpg"width="250" height="200" alt="tiradores"></div>
-        
+<body class="fondo">
+    
+    <header class="header">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand animacion" href="../index.html">
+                <img src="../multimedia/Multimedia/logo nuevo 2.svg" alt="Logo" class="d-inline-block align-text-top redondeado" width="40" height="40"> 
+                GS Carpintería</a>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../html/materiales.html">Materiales</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="../html/galería.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="../html/nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="../html/contacto.html">Contacto</a>
+                  </li>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Galería de fotos y videos</h2>
+           <div class="container2">
+            <div class="imagen">
+                <div class="row row-col-3">
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/cajitas de madera.jpg" width="280" height="200" alt="cajitas de madera">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/juego cocina.jpg"width="280" height="200" alt="juego cocina">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/juego de living.jpg"width="280" height="200" alt="juego de living">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/juego dormitorio.jpg"width="280" height="200" alt="juego dormitorio">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/mesa de arrime.jpg"width="280" height="200" alt="mesa de arrime">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/IMG_20200613_093947.jpg"width="280" height="200" alt="bisagras">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/IMG_20201105_132902.jpg"width="280" height="200" alt="correderas    telescopicas">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/IMG_20201128_182728.jpg"width="280" height="200" alt="perfiles aluminio">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/IMG_20201216_133652.jpg"width="280" height="200" alt="placas de melamina">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <img class="img-decorate" src="../multimedia/Multimedia/amoblamiento alexis.jpg"width="280" height="200" alt="tiradores">
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-4">
+                        <video width="280" height="200" autoplay controls>
+                            <source src="../multimedia/Multimedia/video-madera.mp4" type="video/mp4"/>
+                        </video>    
+                    </div>
                 </div>
-            </a> 
-        </header>
-    </div>
+            </div> 
+    </main>
+    <footer class="footer">
+        <div>&copy;Todos los derechos reservados - GS Carpintería - 2022 - La Emilia - Provincia de Buenos Aires - Argentina</div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
