--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>GS Carpintería</title>
   <link rel="shortcut icon" href="multimedia/Multimedia/logo nuevo 2.svg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/ab7d7faae0.js" crossorigin="anonymous"></script>
 </head>
 <!-- En el fondo se le agrego una imagen, esta imagen se aplica a todas las páginas-->
@@ -17,21 +17,21 @@
   <main>
     <div class="container">
       <div class="img">
-        <img src="./multimedia/Multimedia/logo nuevo 2.svg"  alt="logo-principal"> 
+        <img src="../multimedia/Multimedia/logo nuevo 2.svg"  alt="logo-principal"> 
       </div>
       <div class="lista">
         <ul class="lista-item">
           <div class="lista-nav">
-            <a href="./html/materiales.html"><li>Materiales</li></a>
+            <a href="../html/materiales.html"><li>Materiales</li></a>
           </div>
           <div class="lista-nav">
-            <a href="./html/galería.html"><li>Galería</li></a>
+            <a href="../html/galería.html"><li>Galería</li></a>
           </div>
           <div class="lista-nav">
-            <a href="./html/nosotros.html"><li>Nosotros</li></a>
+            <a href="../html/nosotros.html"><li>Nosotros</li></a>
           </div>
           <div class="lista-nav">
-            <a href="./html/contacto.html"><li>Contacto</li></a>
+            <a href="../html/contacto.html"><li>Contacto</li></a>
           </div>
         </ul>
       </div>
