cambios de rutas v2

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -18,16 +18,16 @@
                  <a class="navbar-brand animacion" href="../index.html">
                     <img src="../multimedia/Multimedia/logo nuevo 2.svg" alt="Logo" class="d-inline-block align-text-top redondeado" width="40" height="40"> GS Carpintería</a>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../html/materiales.html">Materiales</a>
+                            <a class="nav-link active" aria-current="page" href="materiales.html">Materiales</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../html/galería.html">Galeria</a>
+                            <a class="nav-link active" href="galería.html">Galeria</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../html/nosotros.html">Nosotros</a>
+                            <a class="nav-link active" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../html/contacto.html">Contacto</a>
+                            <a class="nav-link active" href="contacto.html">Contacto</a>
                         </li>
                 </div>
             </nav>
