--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
   <main>
     <div class="container">
       <div class="img">
-        <img src="../multimedia/Multimedia/logo nuevo 2.svg"  alt="logo-principal"> 
+        <img src="multimedia/Multimedia/logo nuevo 2.svg"  alt="logo-principal"> 
       </div>
       <div class="lista">
         <ul class="lista-item">
           <div class="lista-nav">
-            <a href="../html/materiales.html"><li>Materiales</li></a>
+            <a href="html/materiales.html"><li>Materiales</li></a>
           </div>
           <div class="lista-nav">
-            <a href="../html/galería.html"><li>Galería</li></a>
+            <a href="html/galería.html"><li>Galería</li></a>
           </div>
           <div class="lista-nav">
-            <a href="../html/nosotros.html"><li>Nosotros</li></a>
+            <a href="html/nosotros.html"><li>Nosotros</li></a>
           </div>
           <div class="lista-nav">
-            <a href="../html/contacto.html"><li>Contacto</li></a>
+            <a href="html/contacto.html"><li>Contacto</li></a>
           </div>
         </ul>
       </div>
